force-app/main/default/objects/ConfiguracaoCanalAtendimento__mdt/ConfiguracaoCanalAtendimento__mdt.object-meta.xml
<CustomObject>
    <label>Configuração de canal de atendimento</label>
    <pluralLabel>Configurações de canais de atendimento</pluralLabel>
</CustomObject>