force-app/main/default/objects/ConfiguracaoCanalAtendimento__mdt/fields/CanalAtendimento__c.field-meta.xml
<CustomField>
    <fullName>CanalAtendimento__c</fullName>
    <description>Indica o canal de atendimento a ser configurado.</description>
    <inlineHelpText>Indique o canal de atendimento a ser configurado.</inlineHelpText>
    <label>Canal de atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fale conosco</fullName>
                <default>true</default>
                <label>Fale conosco</label>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>Stand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>