force-app/main/default/objects/ConfiguracaoCanalAtendimento__mdt/fields/SLARedistribuicao__c.field-meta.xml
<CustomField>
    <fullName>SLARedistribuicao__c</fullName>
    <description>Indica o tempo em segundos para redistribuição neste canal caso o lead não seja atendido.</description>
    <inlineHelpText>Indique o tempo em segundos para redistribuição neste canal caso o lead não seja atendido.</inlineHelpText>
    <label>SLA para redistribuição</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>