force-app/main/default/objects/ConfiguracaoCanalAtendimento__mdt/listViews/ConfiguracoesCanaisAtendimento.listView-meta.xml
<ListView>
    <fullName>ConfiguracoesCanaisAtendimento</fullName>
    <columns>MasterLabel</columns>
    <columns>CanalAtendimento__c</columns>
    <columns>Carga__c</columns>
    <columns>SLARedistribuicao__c</columns>
    <columns>Bypass__c</columns>
    <filterScope>Everything</filterScope>
    <label>Configurações dos canais de atendimento</label>
    <language>pt_BR</language>
</ListView>